:fire: Remove redis, websockets, sse, and webhooks services (#1102)
* :construction_worker: :fire: Remove redis from docker-compose and manage

* :art: rewrite comments for nats events

* :fire: delete redis-expire script

* :heavy_minus_sign: remove redis dependency from endorser

* :construction_worker: replace use of `codenvy/che-ip` image

* :construction_worker: :art: Replace redis_events reference with nats_events

* :construction_worker: :fire: :art: Remove references to webhooks service

* :fire: delete webhooks module

* :fire: remove webhooks endpoint, service and tests

* :fire: remove webhooks dockerfile and mise tasks

* :fire: remove redis service

* :fire: delete websocket service and endpoint

* :heavy_minus_sign: remove fastapi_websocket_pubsub

* :heavy_minus_sign: remove extra packages from uvicorn install

* :wrench: :fire: delete redis/webhooks specific config files

* :fire: delete webhooks e2e test

* :art: update readme docs

* :art: redis -> nats

* :art: remove webhooks config

* :art: remove lifespan check in test

* :art: remove webhooks related env vars

* :fire::art: remove SseListern's wait_for_state method

* :fire::art: remove sse, websocket endpoints from app main, and update doc descriptions

* :arrow_up: Update lock files

* :art: remove unused `look_back` arg

* :art:

* :art: remove billing service env vars

* :art: update project version

* :construction_worker: add Waypoint module to dependabot

* :construction: replace SSE URL to use Waypoint

* :memo: Update openapi docs

* :art: remove unused WEBHOOK_TOPIC_ALL

* :art: remove unused import

* :fire::art: re-add SSE routes, and only remove endpoints that used Webhooks URL

* :rewind: revert k6 changes

* :memo: Update openapi specs to include the one sse endpoint

* :art: add init modules

* :art: remove `look_back` references

* :art:
