# openapi/tenant-openapi.yaml
@@ -3,54 +3,12 @@ info:
   title: CloudAPI Tenant
   description: "
 
-    Welcome to the Aries CloudAPI Python project.
+    Welcome to the Aries CloudAPI Python project!
 
 
-    In addition to the traditional HTTP-based endpoints described below, we also offer
-    WebSocket endpoints for
+    For detailed guidance on using the API, please visit our official documentation:
 
-    real-time interfacing with webhook events.
-
-
-    WebSocket endpoints are authenticated. This means that only users with valid authentication
-    tokens can establish
-
-    a WebSocket connection, and they can only subscribe to their own wallet's events.
-    However, Admin users have the
-
-    ability to subscribe by topic, or to any wallet in their group.
-
-
-    Our WebSocket endpoints are as follows:
-
-
-    1. `/v1/ws/`: This endpoint allows admins to receive all webhook events for their
-    group.
-
-
-    2. `/v1/ws/{wallet_id}`: This endpoint allows admins (or authenticated users holding
-    this wallet) to receive webhook
-
-    events for a specific wallet ID.
-
-
-    3. `/v1/ws/{wallet_id}/{topic}`: Similar to above, but subscribing to a specific
-    topic.
-
-
-    4. `/v1/ws/topic/{topic}`: This endpoint allows admins to receive all webhook
-    events on a specific topic (e.g.
-
-    `connections`, `credentials`, `proofs`, `endorsements`).
-
-
-    For authentication, the WebSocket headers should include `x-api-key`: `<your key>`.
-
-
-    Please refer to our API documentation for more details about our authentication
-    mechanism, as well as for information
-
-    about the available topics.
+    https://www.didx.co.za/ssi-dev-portal/docs/Welcome.
 
     "
   version: 1.0.0
@@ -2503,342 +2461,6 @@ paths:
                 $ref: "#/components/schemas/HTTPValidationError"
       security:
         - APIKeyHeader: []
-  /v1/webhooks:
-    get:
-      tags:
-        - webhooks
-      summary: Get Webhooks For Wallet
-      description: "**Deprecated**: Fetching bulk webhook events is set to be removed.
-
-        We recommend monitoring webhook events live, using the SSE endpoint instead,
-        or websockets if preferred.
-
-
-        Returns 100 most recent webhooks for this wallet
-
-
-        This implicitly extracts the wallet ID and return only items
-
-        belonging to the caller's wallet.
-
-
-        Returns:
-
-        ---------
-
-        List of webhooks belonging to the wallet"
-      operationId: get_webhooks_for_wallet_v1_webhooks_get
-      responses:
-        "200":
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                items:
-                  $ref: "#/components/schemas/CloudApiWebhookEventGeneric"
-                type: array
-                title: Response Get Webhooks For Wallet V1 Webhooks Get
-      deprecated: true
-      security:
-        - APIKeyHeader: []
-  /v1/webhooks/{topic}:
-    get:
-      tags:
-        - webhooks
-      summary: Get Webhooks For Wallet By Topic
-      description: "**Deprecated**: Fetching bulk webhook events is set to be removed.
-
-        We recommend monitoring webhook events live, using the SSE endpoint instead,
-        or websockets if preferred.
-
-
-        Returns 100 most recent webhooks for this wallet / topic pair
-
-
-        This implicitly extracts the wallet ID and return only items
-
-        belonging to the caller's wallet.
-
-
-        Returns:
-
-        ---------
-
-        List of webhooks belonging to the wallet"
-      operationId: get_webhooks_for_wallet_by_topic_v1_webhooks__topic__get
-      deprecated: true
-      security:
-        - APIKeyHeader: []
-      parameters:
-        - name: topic
-          in: path
-          required: true
-          schema:
-            enum:
-              - basic-messages
-              - connections
-              - proofs
-              - credentials
-              - credentials_indy
-              - credentials_ld
-              - endorsements
-              - oob
-              - revocation
-              - issuer_cred_rev
-              - problem_report
-            type: string
-            title: Topic
-      responses:
-        "200":
-          description: Successful Response
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/CloudApiWebhookEventGeneric"
-                title: Response Get Webhooks For Wallet By Topic V1 Webhooks  Topic  Get
-        "422":
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-  /v1/sse/{wallet_id}:
-    get:
-      tags:
-        - sse
-      summary: Subscribe To Wallet Events
-      description: "Subscribe to server-side events for a specific wallet ID.\n\n\
-        Parameters:\n-----------\n    wallet_id: The ID of the wallet subscribing\
-        \ to the events.\n    look_back: Specifies the look back window in seconds,\
-        \ to include events before connection established."
-      operationId: Subscribe_to_Wallet_Events_v1_sse__wallet_id__get
-      security:
-        - APIKeyHeader: []
-      parameters:
-        - name: wallet_id
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Wallet Id
-        - name: look_back
-          in: query
-          required: false
-          schema:
-            type: number
-            maximum: 10.0
-            minimum: 0.0
-            description: The duration in seconds to look back in time, defining the
-              window of additional webhook events that should be included, prior to
-              the initial connection of the stream. The default value will include events
-              up to 10.0 seconds ago, and represents the maximum value for this setting.
-              Setting to 0 means only events after the connection is established will
-              be returned.
-            default: 10.0
-            title: Look Back
-          description: The duration in seconds to look back in time, defining the window
-            of additional webhook events that should be included, prior to the initial
-            connection of the stream. The default value will include events up to 10.0
-            seconds ago, and represents the maximum value for this setting. Setting
-            to 0 means only events after the connection is established will be returned.
-      responses:
-        "200":
-          description: Successful Response
-        "422":
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-  /v1/sse/{wallet_id}/{topic}:
-    get:
-      tags:
-        - sse
-      summary: Subscribe To Wallet Events By Topic
-      description: "Subscribe to server-side events for a specific wallet ID and topic.\n\
-        \nParameters:\n-----------\n    wallet_id: The ID of the wallet subscribing\
-        \ to the events.\n    topic: The topic to which the wallet is subscribing.\n\
-        \    look_back: Specifies the look back window in seconds, to include events\
-        \ before connection established."
-      operationId: Subscribe_to_Wallet_Events_by_Topic_v1_sse__wallet_id___topic__get
-      security:
-        - APIKeyHeader: []
-      parameters:
-        - name: wallet_id
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Wallet Id
-        - name: topic
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Topic
-        - name: look_back
-          in: query
-          required: false
-          schema:
-            type: number
-            maximum: 10.0
-            minimum: 0.0
-            description: The duration in seconds to look back in time, defining the
-              window of additional webhook events that should be included, prior to
-              the initial connection of the stream. The default value will include events
-              up to 10.0 seconds ago, and represents the maximum value for this setting.
-              Setting to 0 means only events after the connection is established will
-              be returned.
-            default: 10.0
-            title: Look Back
-          description: The duration in seconds to look back in time, defining the window
-            of additional webhook events that should be included, prior to the initial
-            connection of the stream. The default value will include events up to 10.0
-            seconds ago, and represents the maximum value for this setting. Setting
-            to 0 means only events after the connection is established will be returned.
-      responses:
-        "200":
-          description: Successful Response
-        "422":
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-  /v1/sse/{wallet_id}/{topic}/{desired_state}:
-    get:
-      tags:
-        - sse
-      summary: Subscribe To A Wallet Event By Topic And Desired State
-      description: "Subscribe to server-side events for a specific wallet ID and topic,\n\
-        and wait for an event that matches the desired state.\n\nParameters:\n-----------\n\
-        \    wallet_id: The ID of the wallet subscribing to the events.\n    topic:\
-        \ The topic to which the wallet is subscribing.\n    desired_state: The desired\
-        \ state to be reached.\n    look_back: Specifies the look back window in seconds,\
-        \ to include events before connection established."
-      operationId: Subscribe_to_a_Wallet_Event_by_Topic_and_Desired_State_v1_sse__wallet_id___topic___desired_state__get
-      security:
-        - APIKeyHeader: []
-      parameters:
-        - name: wallet_id
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Wallet Id
-        - name: topic
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Topic
-        - name: desired_state
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Desired State
-        - name: look_back
-          in: query
-          required: false
-          schema:
-            type: number
-            maximum: 10.0
-            minimum: 0.0
-            description: The duration in seconds to look back in time, defining the
-              window of additional webhook events that should be included, prior to
-              the initial connection of the stream. The default value will include events
-              up to 10.0 seconds ago, and represents the maximum value for this setting.
-              Setting to 0 means only events after the connection is established will
-              be returned.
-            default: 10.0
-            title: Look Back
-          description: The duration in seconds to look back in time, defining the window
-            of additional webhook events that should be included, prior to the initial
-            connection of the stream. The default value will include events up to 10.0
-            seconds ago, and represents the maximum value for this setting. Setting
-            to 0 means only events after the connection is established will be returned.
-      responses:
-        "200":
-          description: Successful Response
-        "422":
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/HTTPValidationError"
-  /v1/sse/{wallet_id}/{topic}/{field}/{field_id}:
-    get:
-      tags:
-        - sse
-      summary: Subscribe To Wallet Events By Topic And Field
-      description: "Subscribe to server-side events for a specific wallet ID and topic,\
-        \ and\nfilter the events for payloads containing a specific field and field\
-        \ ID pair.\n\nParameters:\n-----------\n    wallet_id: The ID of the wallet\
-        \ subscribing to the events.\n    topic: The topic to which the wallet is\
-        \ subscribing.\n    field: The field to which the wallet is subscribing.\n\
-        \    field_id: The ID of the field subscribing to the events.\n    look_back:\
-        \ Specifies the look back window in seconds, to include events before connection\
-        \ established."
-      operationId: Subscribe_to_Wallet_Events_by_Topic_and_Field_v1_sse__wallet_id___topic___field___field_id__get
-      security:
-        - APIKeyHeader: []
-      parameters:
-        - name: wallet_id
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Wallet Id
-        - name: topic
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Topic
-        - name: field
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Field
-        - name: field_id
-          in: path
-          required: true
-          schema:
-            type: string
-            title: Field Id
-        - name: look_back
-          in: query
-          required: false
-          schema:
-            type: number
-            maximum: 10.0
-            minimum: 0.0
-            description: The duration in seconds to look back in time, defining the
-              window of additional webhook events that should be included, prior to
-              the initial connection of the stream. The default value will include events
-              up to 10.0 seconds ago, and represents the maximum value for this setting.
-              Setting to 0 means only events after the connection is established will
-              be returned.
-            default: 10.0
-            title: Look Back
-          description: The duration in seconds to look back in time, defining the window
-            of additional webhook events that should be included, prior to the initial
-            connection of the stream. The default value will include events up to 10.0
-            seconds ago, and represents the maximum value for this setting. Setting
-            to 0 means only events after the connection is established will be returned.
-      responses:
-        "200":
-          description: Successful Response
-        "422":
-          description: Validation Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/HTTPValidationError"
   /v1/sse/{wallet_id}/{topic}/{field}/{field_id}/{desired_state}:
     get:
       tags:
@@ -2850,8 +2472,7 @@ paths:
         \ to the events.\n    topic: The topic to which the wallet is subscribing.\n\
         \    field: The field to which the wallet is subscribing.\n    field_id: The\
         \ ID of the field subscribing to the events.\n    desired_state: The desired\
-        \ state to be reached.\n    look_back: Specifies the look back window in seconds,\
-        \ to include events before connection established."
+        \ state to be reached."
       operationId: Subscribe_to_a_Wallet_Event_by_Topic__Field__and_Desired_State_v1_sse__wallet_id___topic___field___field_id___desired_state__get
       security:
         - APIKeyHeader: []
@@ -2886,26 +2507,6 @@ paths:
           schema:
             type: string
             title: Desired State
-        - name: look_back
-          in: query
-          required: false
-          schema:
-            type: number
-            maximum: 10.0
-            minimum: 0.0
-            description: The duration in seconds to look back in time, defining the
-              window of additional webhook events that should be included, prior to
-              the initial connection of the stream. The default value will include events
-              up to 10.0 seconds ago, and represents the maximum value for this setting.
-              Setting to 0 means only events after the connection is established will
-              be returned.
-            default: 10.0
-            title: Look Back
-          description: The duration in seconds to look back in time, defining the window
-            of additional webhook events that should be included, prior to the initial
-            connection of the stream. The default value will include events up to 10.0
-            seconds ago, and represents the maximum value for this setting. Setting
-            to 0 means only events after the connection is established will be returned.
       responses:
         "200":
           description: Successful Response
@@ -3332,32 +2933,6 @@ components:
       required:
         - revocation_registry_credential_map
       title: ClearPendingRevocationsResult
-    CloudApiWebhookEventGeneric:
-      properties:
-        wallet_id:
-          type: string
-          title: Wallet Id
-        topic:
-          type: string
-          title: Topic
-        origin:
-          type: string
-          title: Origin
-        group_id:
-          anyOf:
-            - type: string
-            - type: "null"
-          title: Group Id
-        payload:
-          type: object
-          title: Payload
-      type: object
-      required:
-        - wallet_id
-        - topic
-        - origin
-        - payload
-      title: CloudApiWebhookEventGeneric
     ConnectToPublicDid:
       properties:
         public_did:
