# webhooks/models/__init__.py
@@ -1,6 +1,0 @@
-# flake8: noqa
-# pylint: disable=unused-import
-from webhooks.models.conversions import *
-from webhooks.models.redis_payloads import *
-from webhooks.models.topic_mapping import *
-from webhooks.models.topic_payloads import *
